# bot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  LanguageContext.tsx  Proxy lists.json  README.md  Recording 01_02_2026 at 15_27_16.json  apply_optimizations.py  check_agencies.py  check_all_tasks.py  check_cache.py  check_cached_ids.py  check_tasks.py  check_unknown.py  cleanup.sh  debug_api_response.py  debug_api_response2.py  debug_slots.py  debug_sold_out.py  debug_ticket_types.py  deploy.sh  docker-compose-local.yml  docker-compose-optimized.yml  docker-compose.yml  fix_agency.py  fix_filter_v2.py  fix_init.py  fix_task_lang.py  fix_tasks.py  fix_ticket_filter.py  fix_ticket_names.py  index.ts  layout.tsx  maintenance.sh  page.tsx  patch_matching.py  patch_notification.py  patch_show_all_slots.py  register_periodic_tasks.py  (+9 more)
_archive/: debug_dom.html  debug_fetch_vatican.py  debug_home.html  debug_ids_on_page.py  debug_timestamp_calc.py  diagnose_agency.py  diagnose_vatican_full.py  verify_feb13.py
backend/: audit_prefs.py  create_admin.py  create_schedule.py  db.sqlite3  db_audit.py  debug_ticket_req.py  fix_stale_id.py  update_schedule_fix.py
frontend/: package-lock.json  package.json
harvester/: Dockerfile  harvester.py
nginx/: nginx.conf
queue_solver/: Dockerfile  harvester.py  solve.py
worker_colosseum/rust_core/: Cargo.toml  Dockerfile  build.rs
worker_colosseum/rust_core/src/: client.rs  grpc_server.rs  main.rs  models.rs  parser.rs  redis_store.rs  state_machine.rs
worker_colosseum/rust_core/src/evasion/: behavioral_mimicry.rs  http2_fingerprint.rs  ja3_rotation.rs  mod.rs
(+90 files in other folders)
